# programming

Calculator/: Calculator.sln
Calculator v0.1/Calculator/: Calculator.cpp  calcul.cpp  calcul.h
Calculator/Calculator/: Calculator.cpp  Calculator.vcxproj  calcul.cpp  calcul.h
Calculator_main/Calculator_main/: CMakeLists.txt  Calculator_main.cpp  calcul.cpp  calcul.h  dll_read.cpp  dll_read.h
Calculator_main/plugins/: cos.cpp  lg.cpp
Calculator_main_v.f/Calculator_main_v.f/: CMakeLists.txt  Calculator_main_v.f.cpp  Calculator_main_v.f.h
Calculator_main_v.final/Calculator_main_v.final/: CMakeLists.txt  Calculator_main.cpp  Calculator_main.h  calcul.cpp  calcul.h  dll_read.h
